Fix tests, cleanup
