# pkg/api/openapi/mediator/v1/mediator.swagger.json
@@ -242,39 +242,6 @@
         ]
       }
     },
-    "/api/v1/auth/login": {
-      "post": {
-        "summary": "LogIn to Mediator",
-        "operationId": "AuthService_LogIn",
-        "responses": {
-          "200": {
-            "description": "A successful response.",
-            "schema": {
-              "$ref": "#/definitions/v1LogInResponse"
-            }
-          },
-          "default": {
-            "description": "An unexpected error response.",
-            "schema": {
-              "$ref": "#/definitions/rpcStatus"
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/v1LogInRequest"
-            }
-          }
-        ],
-        "tags": [
-          "AuthService"
-        ]
-      }
-    },
     "/api/v1/auth/logout": {
       "post": {
         "summary": "Logout of Mediator",
@@ -3154,6 +3121,15 @@
           "type": "integer",
           "format": "int32"
         },
+        "email": {
+          "type": "string"
+        },
+        "firstName": {
+          "type": "string"
+        },
+        "lastName": {
+          "type": "string"
+        },
         "createdAt": {
           "type": "string",
           "format": "date-time"
@@ -3811,36 +3787,6 @@
         }
       },
       "description": "ListRuleTypesResponse is the response to list rule types."
-    },
-    "v1LogInRequest": {
-      "type": "object",
-      "properties": {
-        "username": {
-          "type": "string"
-        },
-        "password": {
-          "type": "string"
-        }
-      }
-    },
-    "v1LogInResponse": {
-      "type": "object",
-      "properties": {
-        "refreshToken": {
-          "type": "string"
-        },
-        "accessToken": {
-          "type": "string"
-        },
-        "refreshTokenExpiresIn": {
-          "type": "string",
-          "format": "int64"
-        },
-        "accessTokenExpiresIn": {
-          "type": "string",
-          "format": "int64"
-        }
-      }
     },
     "v1LogOutRequest": {
       "type": "object"
